# youtube-dl-gui

./: .gitignore  Cargo.toml  README.md  build.rs
src/: gui.rs  main.rs
src/resources/: colors.rs  images.rs  mod.rs
src/resources/fonts/: mod.rs  open_sans.rs
src/resources/styles/: application_styles.rs  button_styles.rs  container_styles.rs  menu_styles.rs  mod.rs  pick_list_styles.rs  progress_bar_styles.rs  rule_styles.rs  scrollable_styles.rs  text_input_styles.rs  text_styles.rs  theme.rs
src/utils/: download_path_picker.rs  format.rs  logger.rs  mod.rs  parsed_output_stream.rs  query_cache.rs
src/views/: choosing.rs  downloading.rs  failed.rs  mod.rs  ready.rs
