[package]
name = "youtube-dl-gui"
version = "0.2.0"
edition = "2021"
authors = ["hristogochev"]
description = "Cross-platform GUI for youtube-dl made with Iced"
license = "GPL-3.0"
repository = "https://github.com/hristogochev/youtube-dl-gui"
readme = "README.md"
keywords = ["youtube-dl", "youtube", "gui"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
iced = { version = "0.8.0", features = ["image"] }
image = { version = "0.24", features = ["ico"] }
rfd = { version = "0.11" }

# Core
youtube-dl-parser = "0.2"

# Utilities
once_cell = "1.17"
single-instance = "0.3"

# Logging
log = "0.4.17"
simplelog = "0.12"

# Windows specific
[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"